# op-api-rust-sdk

./: .gitignore  Cargo.toml  README.md  rust.yml
.github/: dependabot.yml
.github/workflows/: rust.yml
examples/: README.md  accounts.rs
src/: client.rs  lib.rs  options.rs  requests.rs
src/apis/: accounts.rs  funds.rs  holdings.rs  mod.rs
src/model/: accounts.rs  funds.rs  holdings.rs  mod.rs
tests/: accounts.rs  funds.rs  holdings.rs
